--- a/JSFAlunos/nbproject/project.properties
+++ b/JSFAlunos/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.casablanca-1.0.10.jar=C:\\Users\\rober\\Downloads\\casablanca-1.0.10.jar
+file.reference.pepper-grinder-1.0.10.jar=C:\\Users\\rober\\Downloads\\pepper-grinder-1.0.10.jar
 file.reference.primefaces-6.2.jar=lib/primefaces-6.2.jar
 includes=**
 j2ee.compile.on.save=true
@@ -47,7 +49,10 @@ javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${file.reference.primefaces-6.2.jar}:\
     ${libs.hibernate4-persistence.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.hibernate4-support.classpath}:\
+    ${file.reference.casablanca-1.0.10.jar}:\
+    ${file.reference.pepper-grinder-1.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
