--- a/JSFAlunos/nbproject/private/private.properties
+++ b/JSFAlunos/nbproject/private/private.properties
@@ -1,12 +1,12 @@
-deploy.ant.properties.file=C:\\Users\\eduar\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-794503854.properties
-file.reference.casablanca-1.0.10.jar=C:\\Users\\eduar\\Documents\\NetBeansProjects\\Projeto_SA\\JSFAlunos\\lib\\casablanca-1.0.10.jar
-file.reference.pepper-grinder-1.0.10.jar=C:\\Users\\eduar\\Documents\\NetBeansProjects\\Projeto_SA\\JSFAlunos\\lib\\primefaces-6.2.jar
+deploy.ant.properties.file=C:\\Users\\Aluno\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1216817330.properties
+file.reference.casablanca-1.0.10.jar=C:\\Users\\Aluno\\Documents\\AdrianoR\\Projeto_SA\\JSFAlunos\\lib\\casablanca-1.0.10.jar
+file.reference.pepper-grinder-1.0.10.jar=C:\\Users\\Aluno\\Documents\\AdrianoR\\Projeto_SA\\JSFAlunos\\lib\\primefaces-6.2.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/eduar/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
-j2ee.server.home=C:/Program Files (x86)/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files (x86)\\glassfish-4.1.1\\glassfish;C:\\Program Files (x86)\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Program Files (x86)/glassfish-4.1.1
+j2ee.server.domain=C:/Users/Aluno/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\eduar\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Aluno\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
