--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-/JSFAlunos/nbproject/private/
-/JSFAlunos/build/
+# NetBeans specific #
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+# Class Files #
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
